# endfield_damage_calculator_2.0

./: .gitignore  AGENTS.md  github_pull_module.py  skills-lock.json
endfield_damage_calculator/: build.py  main.py  please_read_me.py  pyproject.toml  终末地伤害计算器.spec
endfield_damage_calculator/calculation/: __init__.py  formula.py  inverse.py  multiplicative_zone.py
endfield_damage_calculator/calculation/multiplicative_zones/: __init__.py  ability_bonus_zone.py  attribute_zone.py  base_zone.py  defense_zone.py  final_attack_zone.py  zone_manager.py
endfield_damage_calculator/character_weapon_equipment/character_data/: add_character.py  character_data.py  characters.json  formula.py  inverse_formula.py  inverse_skill_formula.py
endfield_damage_calculator/character_weapon_equipment/weapon_data/: add_weapon.py  formula.py  weapon_data.py  weapons.json
endfield_damage_calculator/data/: __init__.py  loader.py
endfield_damage_calculator/gui_design/: gui.py  gui_settings.py  gui_tools.py  property_display.py  selection_components.py  selection_panel.py
endfield_damage_calculator/scripts/: inverse_cli.py
endfield_damage_calculator/tests/: test_calculation.py  test_data_generators.py
endfield_damage_calculator/utils/: __init__.py  path_utils.py
scripts/: inverse_cli.py
